feat: send login info to email, fake smtp, security

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -30,11 +30,19 @@ services:
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
       PGADMIN_CONFIG_SERVER_MODE: "False"
     ports:
-      - 8082:80
+      - "8082:80"
     depends_on:
       - guitar-shop.postgres
     networks:
       - guitar-shop.postgres
+
+  guitar-shop.fakesmtp:
+    image: gessnerfl/fake-smtp-server:2.2.0
+    container_name: 'guitar-shop.fakesmtp'
+    hostname: 'guitar-shop.fakesmtp'
+    ports:
+      - "${MAIL_SMTP_PORT}:8025"
+      - "1083:8080"
 
 volumes:
   guitar-shop.postgres:
