--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "4.0.1",
     "@nestjs/swagger": "7.3.0",
     "@prisma/client": "5.9.1",
     "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "dayjs": "1.11.10",
+    "fs-extra": "11.2.0",
     "handlebars": "4.7.8",
     "joi": "17.12.1",
     "reflect-metadata": "^0.2.0",
@@ -46,7 +49,9 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "5.0.2",
     "@types/express": "^4.17.17",
+    "@types/fs-extra": "11.0.4",
     "@types/jest": "^29.5.2",
+    "@types/multer": "1.4.11",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
