chore: minor fixes

--- a/app.env.example
+++ b/app.env.example
@@ -15,3 +15,5 @@ MAIL_SMTP_PORT=8025
 MAIL_USER_NAME=admin
 MAIL_USER_PASSWORD=test
 MAIL_FROM=guitar-shop@gmail.local
+
+UPLOAD_DIRECTORY=D:\Projects\guitar-shop\src\shared\modules\products\file\uploads
